# portfolio_dashboard

./: .env.example  .gitignore  Dockerfile  README.md  SPEC-1-share-portfolio-dashboard.md  SPEC-2-share-portfolio-dashboard-vercel-neon.md  pyproject.toml  render.yaml  requirements.txt  schema.sql
app/: config.py  db.py  main.py  market_data.py  models.py  pdf_report.py
app/templates/: charts.html  dashboard.html  error.html
data/: portfolio.csv
scripts/: migrate_sqlite_to_neon.py
