[project]
name = "share-portfolio-dashboard"
version = "6.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "jinja2>=3.1,<4",
  "requests>=2.32,<3",
  "cachetools>=5.5,<7",
  "pydantic>=2.8,<3",
  "python-dotenv>=1.0,<2",
  "psycopg[binary]>=3.2,<4",
]

[project.scripts]
app = "api.index:app"
